# HawkEye-Mem

./: .cirrus.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER-en.md  DISCLAIMER.md  README-en.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  SECURITY.md  docker-simulation-test-report.md  hermes-skill.md  package.json
.cargo/: config.toml  gcc-sysroot.sh  gcc-wrapper.sh  ld-wrapper.sh  linker-wrapper.sh
.circleci/: config.yml
.github/workflows/: release-linux.yml  release.yml  test.yml
docs/: KANBAN_V0.6.md  V0.5_立项报告_HM-PROPOSAL-002.md  V0.5_钓鱼行动深度融合方案.md  V0.6.1_Token预算管家_技术+测试联合评估报告_HM-JOINT-002.md  V0.6.1_Token预算管家_技术方案设计书_HM-TD-006.md  V0.6.1_Token预算管家_测试用例文档_HM-TC-006.md  W2生产报告.md  业务流程设计_v1.0.md  五级需求分解表_v1.0.md  五级需求分解表_v1.1.md  当前缓存策略_HM-CACHE-001.md  技术实现方案_审查报告.md  技术方案V1.1增补意见_TD-SUP-001.md  技术方案设计书_v1.1.md  秋毫mem_V0.2_技术方案设计书_V1.0.md  秋毫mem_V0.2_技术方案评审会议纪要_V1.0.md  秋毫mem_V0.2_测试用例文档_V1.0.md  秋毫mem_V0.2_测试用例评审会议纪要_V1.0.md  秋毫mem_V0.2_需求评审会议纪要_V1.0.md  秋毫mem_V0.2_需求调研报告_V1.0.md  秋毫mem_V0.5_Token审计_多方评审会议纪要_HM-REVIEW-002.md  秋毫mem_V0.5_Token审计_技术+测试联合评估报告_HM-JOINT-001.md  秋毫mem_V0.5_Token审计需求调研报告_HM-PRD-005-SUP-002.md  秋毫mem_V0.5_Windows模拟测试规划_HM-TEST-WIN-001.md  秋毫mem_V0.5_产品定义与评审整合_HM-BASELINE-V0.5.md  秋毫mem_V0.5_技术方案多方评审会议纪要_HM-TD-REVIEW-005.md  秋毫mem_V0.5_技术方案设计书_HM-TD-005.md  秋毫mem_V0.5_测试用例文档_HM-TC-005.md  秋毫mem_V0.5_缓存策略模型兼容性专项调研_HM-PRD-005-SUP.md  秋毫mem_市场推广方案_V2.0.md  秋毫mem_推广战略二次多方评审会议纪要_V1.0.md  秋毫mem_需求池_V1.0.md  秋毫mem·V0.2→V1.0产品路线图_V1.0.md  秋毫mem·V0.2→V1.0路线图多方评审会议纪要_V1.0.md  需求评审会议纪要_v1.0.md  项目基准文档_V1.1.md  项目基准文档_V1.2.md  项目基准文档_V1.4.md  项目基准文档_V1.5.md  项目基准文档_V1.6.md  (+4 more)
docs/V0.1/: W1生产报告.md  国产化工具链验证报告_V1.0.md  技术方案V1.1评审会议纪要.md  测试用例文档_V1.0_多方评审会议纪要.md  测试用例文档_V1.1.md  立项建议书_v1.0.md  (+2 more)
scripts/: cross-build.sh  hawkeye-mcp-server.py  install-hawkeye-mcp.sh
src/: config.rs  helpers.rs  main.rs  models.rs  models.toml  multi_agent.rs  stats.rs  suggest.rs  thermal.rs
tests/: __init__.py  cli_tests.rs  stress_tests.rs  test_macos_2c2g.sh  test_windows_report.md  test_windows_simulation.py  v06_features.rs
(+75 files in other folders)
