[package]
name = "hawk-eye-mem"
version = "0.3.0"
edition = "2021"
description = "AI-Native memory monitoring CLI — let your Agent feel the RAM"

[features]
default = []
gpu = ["nvml-wrapper"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
ctrlc = "3.4"
toml = "0.8"
dirs-next = "2"
num_cpus = "1"
libc = "0.2"
nvml-wrapper = { version = "0.9", optional = true }
sha2 = "0.10"
hex = "0.4"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
